Added general API GET /api/system -> simple system informations * /api/system/exit -> quit the app

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,7 +2,7 @@
   <div class="col-lg-6">
     <div class="compoment google">
       <header>
-        <h3>Yolo :P</h3>
+        <h3>Logged as</h3>
       </header>
       <section>
         <div class="profile">
