--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,22 +1,23 @@
 <div class="dashboard row">
   <div class="col-lg-6">
-    <div class="compoment google">
+    <div class="compoment google" ng-controller="UserCtrl">
       <header>
         <h3>Logged as</h3>
       </header>
       <section>
-        <div class="profile">
+        <div class="profile" ng-show="user.connected">
           <div class="avatar">
-            <img src="http://www.gravatar.com/avatar/259c902d04bbcf6916ac3a8377771c0e.png?s=100" height="100px" width="100px" />
+            <img src="{{ user.avatar }}" height="100px" width="100px" />
           </div>
           <div class="summary">
-            <div class="name">Quentin Gliech</div>
-            <div class="localisation"><span class="glyphicon glyphicon-map-marker"></span> Wissembourg, Alsace, France</div>
+            <div class="name">{{ user.name }}</div>
+            <div class="localisation"><span class="glyphicon glyphicon-map-marker"></span> {{ user.location }}</div>
           </div>
         </div>
       </section>
       <footer>
-        <button href="#" class="btn btn-primary">Settings</button>
+        <a href="{{ user.link }}" class="btn btn-primary">View Profile</a>
+        <button href="#" class="btn btn-danger" ng-click="logout()">Log out</button>
       </footer>
     </div> <!-- /.compoment.google -->
     <!-- <div class="compoment music">
@@ -35,18 +36,19 @@
     </div>
     later maybe... --> <!-- /.compoment.music -->
   </div>
-  <div class="col-lg-6">
+  <div class="col-lg-6" ng-controller="AlarmClockCtrl">
     <div class="compoment alarm-clock">
       <section>
         <h3>Next alarm set to</h3>
-        <div class="time">7:15am</div>
+        <div class="time">{{ formatTime(wake.date) }}</div>
       </section>
     </div>
     <div class="compoment event">
       <section>
+        <a href="{{ nextEvent.link }}" class="btn btn-primary pull-right view-calendar-btn">View on Google Calendar</a>
         <h3>Next event</h3>
-        <div class="name">Math</div>
-        <div class="time">7:55-9:50am</div>
+        <div class="name">{{ nextEvent.summary }}</div>
+        <div class="time">{{ formatTime(nextEvent.start, true) }}-{{ formatTime(nextEvent.end) }}</div>
       </section>
     </div>
   </div>
